fix: remove ::-webkit-scrollbar

--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -39,11 +39,6 @@ html {
 	scrollbar-color: @base70 @background;
 	scrollbar-width: thin;
 
-	::-webkit-scrollbar {
-		width: 10px;
-		height: 10px;
-	}
-
 	::-webkit-scrollbar-track {
 		background-color: @background;
 	}
